DCR  Field and attendance capture controls are implemented.

--- a/HiDoctorApp/Base.lproj/Main.storyboard
+++ b/HiDoctorApp/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2yb-Ud-cV4">
                                                         <rect key="frame" x="0.0" y="230" width="280" height="200"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Enter your company URL to access Pevonia Intl" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HAl-4I-aVc">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Enter your company URL to access Pevonia CRM" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HAl-4I-aVc">
                                                                 <rect key="frame" x="0.0" y="0.0" width="280" height="31.5"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" priority="750" constant="13" id="5R5-9Q-TnB"/>
@@ -256,7 +256,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="82E-eJ-6se">
                                                 <rect key="frame" x="20" y="20" width="280" height="440"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pevonia Intl welcomes you" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7om-Bw-5eC">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pevonia CRM welcomes you" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7om-Bw-5eC">
                                                         <rect key="frame" x="0.0" y="0.0" width="280" height="15"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="15" id="3f5-DZ-JHW"/>
@@ -702,7 +702,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0zG-Pl-ODX" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Nxb-mG-hxt">
-                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
