--- a/HiDoctorApp/Views/Landing/LandingViewController.storyboard
+++ b/HiDoctorApp/Views/Landing/LandingViewController.storyboard
@@ -21,7 +21,7 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Pevonia Intl-->
+        <!--Pevonia CRM-->
         <scene sceneID="h0q-TL-Kb5">
             <objects>
                 <viewController storyboardIdentifier="landingVC" id="k1P-6M-9cE" customClass="LandingViewController" customModule="HiDOCTOR" customModuleProvider="target" sceneMemberID="viewController">
@@ -189,7 +189,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="j7Y-ld-I9F"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Pevonia Intl" id="2Zo-Lq-TEM">
+                    <navigationItem key="navigationItem" title="Pevonia CRM" id="2Zo-Lq-TEM">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="ybj-O2-JsQ">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="KzJ-fd-5D7">
                                 <rect key="frame" x="269" y="4" width="35" height="36"/>
@@ -371,7 +371,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zEE-V2-EHw" userLabel="emptyStateView">
-                                <rect key="frame" x="0.0" y="164.5" width="320" height="239"/>
+                                <rect key="frame" x="0.0" y="164.5" width="320" height="239.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyState-noInternet" translatesAutoresizingMaskIntoConstraints="NO" id="8CU-0j-ozp">
                                         <rect key="frame" x="110" y="0.0" width="100" height="100"/>
@@ -381,20 +381,20 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check your network and try again" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebt-PR-HF1" userLabel="label1">
-                                        <rect key="frame" x="8" y="110" width="304" height="21"/>
+                                        <rect key="frame" x="8" y="110" width="304" height="21.5"/>
                                         <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="18"/>
                                         <color key="textColor" red="0.49019607840000001" green="0.49019607840000001" blue="0.49019607840000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="coK-Au-QBL">
-                                        <rect key="frame" x="8" y="139" width="304" height="0.0"/>
+                                        <rect key="frame" x="8" y="139.5" width="304" height="0.0"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="17"/>
                                         <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EYP-aU-ceY">
-                                        <rect key="frame" x="85" y="149" width="150" height="30"/>
+                                        <rect key="frame" x="85" y="149.5" width="150" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="150" id="gU5-ma-UwN"/>
                                         </constraints>
@@ -683,13 +683,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From: 11/10/2017 To: 19/11/2017" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0LX-TL-5Xv">
-                                <rect key="frame" x="8" y="16" width="304" height="19"/>
+                                <rect key="frame" x="8" y="16" width="304" height="19.5"/>
                                 <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="16"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="76" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="Lvy-sR-s7O">
-                                <rect key="frame" x="0.0" y="51" width="320" height="517"/>
+                                <rect key="frame" x="0.0" y="51.5" width="320" height="516.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
