--- a/HiDoctorApp/Base.lproj/Main.storyboard
+++ b/HiDoctorApp/Base.lproj/Main.storyboard
@@ -237,7 +237,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="637.5" y="196.25"/>
+            <point key="canvasLocation" x="684" y="89"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="GeA-91-bCJ">
@@ -506,7 +506,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MBG-ah-o4x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2371.875" y="198.75"/>
+            <point key="canvasLocation" x="2224" y="89"/>
         </scene>
         <!--Forgot Password-->
         <scene sceneID="5f0-aS-zk1">
@@ -694,7 +694,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5AU-Fi-ITF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1432.8" y="199.25037481259372"/>
+            <point key="canvasLocation" x="1421" y="89"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xjn-vh-Mq0">
@@ -702,7 +702,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0zG-Pl-ODX" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Nxb-mG-hxt">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -773,36 +773,36 @@
                                     <constraint firstAttribute="trailing" secondItem="yh3-eq-t1m" secondAttribute="trailing" constant="10" id="fd9-Yk-f7f"/>
                                 </constraints>
                             </view>
-                            <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RbJ-RF-ZIk">
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2r0-ra-eqG">
                                 <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <outlet property="delegate" destination="Ag5-7b-H8S" id="vJP-72-ON1"/>
+                                    <outlet property="delegate" destination="Ag5-7b-H8S" id="Nhf-H2-cIB"/>
                                 </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="RbJ-RF-ZIk" firstAttribute="leading" secondItem="XeS-Rg-FbX" secondAttribute="leading" id="3TS-pn-GQ8"/>
+                            <constraint firstItem="XeS-Rg-FbX" firstAttribute="bottom" secondItem="2r0-ra-eqG" secondAttribute="bottom" id="5uM-w4-4aT"/>
                             <constraint firstItem="X6j-ia-UK1" firstAttribute="leading" secondItem="XeS-Rg-FbX" secondAttribute="leading" id="As0-cr-aXR"/>
-                            <constraint firstItem="RbJ-RF-ZIk" firstAttribute="bottom" secondItem="XeS-Rg-FbX" secondAttribute="bottom" id="M19-A5-uQV"/>
+                            <constraint firstItem="2r0-ra-eqG" firstAttribute="leading" secondItem="XeS-Rg-FbX" secondAttribute="leading" id="Jdd-ML-85u"/>
                             <constraint firstItem="XeS-Rg-FbX" firstAttribute="trailing" secondItem="X6j-ia-UK1" secondAttribute="trailing" id="MLY-bG-Rxf"/>
                             <constraint firstItem="XeS-Rg-FbX" firstAttribute="bottom" secondItem="X6j-ia-UK1" secondAttribute="bottom" id="ZZq-Jm-c3b"/>
                             <constraint firstItem="X6j-ia-UK1" firstAttribute="top" secondItem="2Oe-JZ-Too" secondAttribute="top" id="eJU-xT-MSS"/>
-                            <constraint firstItem="RbJ-RF-ZIk" firstAttribute="top" secondItem="XeS-Rg-FbX" secondAttribute="top" id="fwz-RO-eWk"/>
-                            <constraint firstItem="RbJ-RF-ZIk" firstAttribute="trailing" secondItem="XeS-Rg-FbX" secondAttribute="trailing" id="lol-wz-cu1"/>
+                            <constraint firstItem="2r0-ra-eqG" firstAttribute="top" secondItem="XeS-Rg-FbX" secondAttribute="top" id="gfj-hh-FFC"/>
+                            <constraint firstItem="XeS-Rg-FbX" firstAttribute="trailing" secondItem="2r0-ra-eqG" secondAttribute="trailing" id="hUm-my-Zcg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="XeS-Rg-FbX"/>
                     </view>
                     <connections>
                         <outlet property="emptyStateLbl" destination="lKH-OO-mD0" id="KeM-dK-Hf3"/>
                         <outlet property="emptyStateWrapper" destination="X6j-ia-UK1" id="GSE-tN-afe"/>
-                        <outlet property="webView" destination="RbJ-RF-ZIk" id="WMp-Jr-M9X"/>
+                        <outlet property="webView" destination="2r0-ra-eqG" id="mhK-0z-mW3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OpZ-W6-fPN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-135" y="103.75"/>
+            <point key="canvasLocation" x="-114.375" y="88.75"/>
         </scene>
     </scenes>
     <resources>
