--- a/HiDoctorApp/Views/DoctorVisit/AttachmentController.storyboard
+++ b/HiDoctorApp/Views/DoctorVisit/AttachmentController.storyboard
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vfp-ww-kQK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vfp-ww-kQK">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-        </array>
         <array key="SF-UI-Text-Semibold.otf">
             <string>SFUIText-Semibold</string>
         </array>
@@ -56,20 +52,20 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MSJ-Xu-PFK" customClass="CornerRadiusWithShadowView" customModule="HiDOCTOR" customModuleProvider="target">
-                                                    <rect key="frame" x="10" y="10" width="355" height="175"/>
+                                                    <rect key="frame" x="10" y="10" width="355" height="175.5"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XNX-XF-Wa8" userLabel="TopView">
-                                                            <rect key="frame" x="0.0" y="0.0" width="355" height="135"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="355" height="135.5"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="xcq-kS-V5C">
-                                                                    <rect key="frame" x="10" y="17.5" width="100" height="100"/>
+                                                                    <rect key="frame" x="10" y="18" width="100" height="100"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="100" id="Fj3-sk-tqX"/>
                                                                         <constraint firstAttribute="height" constant="100" id="sIw-MG-79g"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I2V-nJ-dKT">
-                                                                    <rect key="frame" x="10" y="17.5" width="100" height="100"/>
+                                                                    <rect key="frame" x="10" y="18" width="100" height="100"/>
                                                                     <state key="normal">
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
@@ -116,7 +112,7 @@
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qun-7V-A6N" userLabel="BottomView">
-                                                            <rect key="frame" x="0.0" y="135" width="355" height="40"/>
+                                                            <rect key="frame" x="0.0" y="135.5" width="355" height="40"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bxx-5E-qHz" userLabel="BorderView">
                                                                     <rect key="frame" x="0.0" y="0.0" width="355" height="1"/>
@@ -287,36 +283,36 @@
                                     <constraint firstItem="bJf-2r-fp7" firstAttribute="leading" secondItem="gpa-Ub-fbW" secondAttribute="leading" constant="10" id="pgE-3w-und"/>
                                 </constraints>
                             </view>
-                            <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w2D-L1-lUI">
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QHB-25-8ye">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <outlet property="delegate" destination="GhM-Kr-0cK" id="Wma-i7-rlT"/>
+                                    <outlet property="delegate" destination="GhM-Kr-0cK" id="pvU-Lw-LGS"/>
                                 </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="QHB-25-8ye" firstAttribute="leading" secondItem="RS0-RT-kq0" secondAttribute="leading" id="1Au-Fn-EAI"/>
                             <constraint firstItem="RS0-RT-kq0" firstAttribute="bottom" secondItem="gpa-Ub-fbW" secondAttribute="bottom" id="1y8-Fo-tp3"/>
                             <constraint firstItem="gpa-Ub-fbW" firstAttribute="top" secondItem="RS0-RT-kq0" secondAttribute="top" id="8aF-M5-sJH"/>
-                            <constraint firstItem="RS0-RT-kq0" firstAttribute="trailing" secondItem="w2D-L1-lUI" secondAttribute="trailing" id="EgE-OM-YWl"/>
-                            <constraint firstItem="RS0-RT-kq0" firstAttribute="bottom" secondItem="w2D-L1-lUI" secondAttribute="bottom" id="TPR-jY-9wf"/>
+                            <constraint firstItem="RS0-RT-kq0" firstAttribute="trailing" secondItem="QHB-25-8ye" secondAttribute="trailing" id="Dze-GM-Zbp"/>
+                            <constraint firstItem="RS0-RT-kq0" firstAttribute="bottom" secondItem="QHB-25-8ye" secondAttribute="bottom" id="UQf-hh-PVe"/>
+                            <constraint firstItem="QHB-25-8ye" firstAttribute="top" secondItem="RS0-RT-kq0" secondAttribute="top" id="XyC-AY-La3"/>
                             <constraint firstItem="RS0-RT-kq0" firstAttribute="trailing" secondItem="gpa-Ub-fbW" secondAttribute="trailing" id="caj-ek-SM7"/>
-                            <constraint firstItem="w2D-L1-lUI" firstAttribute="leading" secondItem="RS0-RT-kq0" secondAttribute="leading" id="jv0-fr-K3N"/>
                             <constraint firstItem="gpa-Ub-fbW" firstAttribute="leading" secondItem="RS0-RT-kq0" secondAttribute="leading" id="puc-DJ-uOB"/>
-                            <constraint firstItem="w2D-L1-lUI" firstAttribute="top" secondItem="RS0-RT-kq0" secondAttribute="top" id="zCT-aW-730"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RS0-RT-kq0"/>
                     </view>
                     <connections>
                         <outlet property="emptyStateLbl" destination="bJf-2r-fp7" id="vce-bs-0xv"/>
                         <outlet property="emptyStateWrapper" destination="gpa-Ub-fbW" id="MAh-cH-8Ek"/>
-                        <outlet property="webView" destination="w2D-L1-lUI" id="KsZ-ZD-N8b"/>
+                        <outlet property="webView" destination="QHB-25-8ye" id="Bks-LA-qo3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5He-zS-aS5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="82.5" y="102.5"/>
+            <point key="canvasLocation" x="-540" y="139.880059970015"/>
         </scene>
     </scenes>
     <resources>
